# MIPS_sim

./: .gitignore  CMakeLists.txt  LICENSES  README.md  configure  configure.sh
.github/workflows/: CI.yml
data/in/assembler/: in.asm
data/in/cpu/: in.asm
data/in/simulator/: in.asm  in_loop.asm  in_loop.hex  init.hex
include/mips_sim/: build_info.h.in  log.h  register.h  utils.h
include/mips_sim/assembler/: assembler.h  parser.h
include/mips_sim/cpu/: alu.h  cpu.h  cpu_pipeline.h  cpu_single_cycle.h  data_memory_unit.h  instruction_memory_unit.h  memory_unit.h  register_file.h
include/mips_sim/simulator/: simulator.h
projects/cpu/: main.cpp
projects/mips_sim/: data_path.h  data_path.h.in  main.cpp  main_sc.cpp
projects/unit_test/: data_path.h  data_path.h.in  utils.cpp
projects/unit_test/assembler/: assembler.cpp  parser.cpp
projects/unit_test/cpu/: cpu.cpp
projects/unit_test/simulator/: simulator.cpp
src/: utils.cpp
src/assembler/: assembler.cpp  parser.cpp
src/cpu/: alu.cpp  cpu.cpp  cpu_pipeline.cpp  cpu_single_cycle.cpp  data_memory_unit.cpp  instruction_memory_unit.cpp  memory_unit.cpp  register_file.cpp
src/simulator/: simulator.cpp
